test/good/euler/problem016.px

print "{2^1000}".fold(_-'0'+_, 0)
