test/bad/strings/format4.px

print "{1+(2+34-567))}"
